--- a/app/src/main/res/layout/specialist_profile.xml
+++ b/app/src/main/res/layout/specialist_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -62,4 +62,4 @@
         android:textColor="@color/colorWhite"
         app:layout_constraintStart_toStartOf="@+id/birth_date_text"
         app:layout_constraintTop_toBottomOf="@+id/birth_date_text" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
